add html and body tags on main

--- a/main.html
+++ b/main.html
@@ -1,6 +1,10 @@
+<html>
+<body>
 <h1>Main page</h1>
 <h2>Menu</h2>
 <nav>
 <a href="page1.html" target="_blank">Page 1</a>
 <a href="page2.html" target="_blank">Page 2</a>
 </nav>
+</body>
+</html>
