--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
 <a href="page1.html" target="_blank">Page 1</a>
 <a href="page2.html" target="_blank">Page 2</a>
 </nav>
+<h3>Subtitle</h3>
 <article>Main page article</article>
 </body>
 </html>
