add article on main and page2

--- a/main.html
+++ b/main.html
@@ -13,5 +13,6 @@
 <a href="page1.html" target="_blank">Page 1</a>
 <a href="page2.html" target="_blank">Page 2</a>
 </nav>
+<article>Main page article</article>
 </body>
 </html>
